@@ -38,7 +38,6 @@ Sync {
 		IPv4_address 225.0.0.50
 		IPv4_interface 192.168.100.200 # IP of dedicated link
 		Group 3780
-		Backlog 20
 	}
 
 	# Enable/Disable message checksumming
@@ -123,8 +122,3 @@ IgnoreProtocol {
 	VRRP
 	# numeric numbers also valid
 }
-
-#
-# Strip NAT traffic
-#
-StripNAT
