@@ -5,6 +5,12 @@ version 0.9.4 (yet unreleased)
 o simplify checksum code: use UDP/multicast checksum facilities
 o fix silly bug in build_network_message: out of bound memset
 o fix error message in configure.in (Eric Leblond)
+o remove useless backlog parameter in multicast sockets
+o remove reminiscents of delay destroy message and relax transitions
+o remove confusing StripNAT parameter: NAT support enabled by default
+o relax event tracking: *_update callbacks use cache_update_force
+o use wraparound-aware functions after/before/between
+o lots of cleanups
 
 = conntrack =
 o fix segfault with conntrack --output (Krzysztof Oledzky)
